Commit of all changes for TogaMP

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,12 +6,15 @@ EXE = fruit
 OBJS = attack.o board.o book.o eval.o fen.o hash.o list.o main.o material.o \
        move.o move_check.o move_do.o move_evasion.o move_gen.o move_legal.o \
        option.o pawn.o piece.o posix.o protocol.o pst.o pv.o random.o recog.o \
-       search.o search_full.o see.o sort.o square.o trans.o util.o value.o \
-       vector.o
+       search.o search_full.o see.o smp.o sort.o square.o trans.o util.o \
+       value.o vector.o
 
 # rules
 
 all: $(EXE) .depend
+
+smp:
+	$(MAKE) CXXFLAGS="$(CXXFLAGS) -DSMP" all
 
 clean:
 	$(RM) *.o .depend gmon.out
@@ -19,8 +22,8 @@ clean:
 # general
 
 CXX      = g++
-CXXFLAGS = -pipe
-LDFLAGS  = -lm
+CXXFLAGS += -pipe
+LDFLAGS  = -lm -lpthread
 
 # C++
 
@@ -28,13 +31,13 @@ CXXFLAGS += -fno-exceptions -fno-rtti
 
 # optimisation
 
-CXXFLAGS += -O3 -fstrict-aliasing
+CXXFLAGS += -fstrict-aliasing -O3
 CXXFLAGS += -fomit-frame-pointer
 # CXXFLAGS += -march=athlon-xp # SELECT ME
 
 # strip
 
-LDFLAGS += -s
+#LDFLAGS += -s
 
 # dependencies
 
